--- a/contacto.html
+++ b/contacto.html
@@ -6,7 +6,7 @@
     <title>Contacto</title>
 </head>
 <body>
-    <h1>Contacto</h1>
+    <h1>Contacto!</h1>
 
     <form action="https://formsubmit.co/delpuertolautaro07@gmail.com" method="post">
         <div>
